--- a/effective-go/do-not-discard-errors/codelingo.yaml
+++ b/effective-go/do-not-discard-errors/codelingo.yaml
@@ -9,15 +9,9 @@ tenets:
     query: |
       import codelingo/ast/go
 
-      go.file(depth = any):
-        go.decls:
-          go.func_decl:
-            go.block_stmt:
-              go.list:
-                go.assign_stmt:
-                  go.lhs:
-                    child_count == 2
-                    go.ident
-                    @review comment
-                    go.ident:
-                      name == "_"
+      go.assign_stmt(depth = any):
+        go.lhs:
+          @review comment
+          go.ident:
+            name == "_"
+            type == "error"
