--- a/effective-go/avoid-annotations-in-comments/codelingo.yaml
+++ b/effective-go/avoid-annotations-in-comments/codelingo.yaml
@@ -10,9 +10,27 @@ funcs:
         var re = new RegExp(exps.join("|"), "i")
         return re.test(text)
       }
+  - name: fixComment
+    type: resolver
+    body: |
+      function(text) {
+        var strSplit = text.split(" ")
+        var result = ''
+        strSplit.forEach(function(word) {
+          if ((word[0] === '<' && word[word.length - 1] === '>') ||
+              (word[0] === '_' && word[word.length - 1] === '_')) {
+            word = word.substring(1, word.length - 1)
+          }
+          word += " "
+          result += word
+        }) 
+        return result.trim()
+      }
 tenets:
   - name: avoid-annotations-in-comments
     flows:
+      codelingo/rewrite:
+        comm: ''
       codelingo/docs:
         title: Avoid Annotations in Comments
         body: |
@@ -29,7 +47,9 @@ tenets:
     query: |
 
       import codelingo/ast/go
+
       @review comment
+      @rewrite --replace {{fixComment(commentText)}}
       go.comment(depth = any):
         text as commentText
         containsAnnotations(commentText)
