--- a/effective-go/comment-first-word-as-subject/codelingo.yaml
+++ b/effective-go/comment-first-word-as-subject/codelingo.yaml
@@ -7,9 +7,18 @@ funcs:
         var words = text.split(" ")
         return words[0].toLowerCase() !== name.toLowerCase()
       }
+  - name: testFunc
+    type: resolver
+    body: |
+      function(text) {
+        return "Text from func"
+      }
 tenets:
   - name: comment-first-word-as-subject
+    vars:
+      someText: "This is a string"
     flows:
+      codelingo/rewrite:
       codelingo/docs:
         title: Comment First Word as Subject
         body: |
@@ -21,14 +30,13 @@ tenets:
     query: |
       import codelingo/ast/go
 
-      go.file(depth = any):
-        go.decls:
-          go.func_decl:
-            go.comment_group:
-              @review comment
-              go.comment:
-                sibling_order == 0
-                text as commText
-            go.ident:
-              name as funcName
-              isValid(commText, funcName)
+      go.func_decl(depth = any):
+        go.comment_group:
+          @review "{{testFunc(funcName)}}"
+          @rewrite --replace "Hello"
+          go.comment:
+            sibling_order == 0
+            text as commText
+        go.ident:
+          name as funcName
+          isValid(commText, funcName)
