--- a/cockroachdb/fmt-verbs/codelingo.yaml
+++ b/cockroachdb/fmt-verbs/codelingo.yaml
@@ -1,11 +1,15 @@
 funcs:
-  - name: containsGeneralVerb
+  - name: hasGeneralVerb
     type: asserter
     body: |
-      function (str) {
-        return str.indexOf("%v") !== -1
+      function (str, order) {
+        order--
+        var matches = str.match(/%[A-Za-z]/g)
+        if (matches.length <= order) return false
+        var result = matches[order]
+        return result === "%v"
       }
-  - name: verbsForType
+  - name: verbForType
     type: resolver
     body: |
       function (type) {
@@ -14,22 +18,22 @@ funcs:
         "string":     "%s", 
         "bool":       "%t",
         "int":        "%d",
-        "int8":       "",
-        "int16":      "",
-        "int32":      "",
-        "int64":      "",
-        "uint":       "",
-        "uint8":      "",
-        "uint16":     "",
-        "uint32":     "",
-        "uint64":     "",
-        "uintptr":    "",
-        "byte":       "",
-        "rune":       "",
-        "float32":    "", 
-        "float64":    "",
-        "complex32":  "",
-        "complex64":  "",
+        "int8":       "%d",
+        "int16":      "%d",
+        "int32":      "%d",
+        "int64":      "%d",
+        "uint":       "%d",
+        "uint8":      "%d",
+        "uint16":     "%d",
+        "uint32":     "%d",
+        "uint64":     "%d",
+        "uintptr":    "%p",
+        "byte":       "%d",
+        "rune":       "%q",
+        "float32":    "%g", 
+        "float64":    "%g",
+        "complex32":  "%g",
+        "complex64":  "%g",
         }
 
         var result = types[type]
@@ -43,7 +47,7 @@ funcs:
 tenets:
   - name: fmt-verbs
     vars:
-      result: "{{verbsForType(argType)}}"
+      result: "{{verbForType(argType)}}"
     flows:
       codelingo/docs:
         title: Use Appropriate Verbs in Format
@@ -56,7 +60,7 @@ tenets:
           will render as "". Therefore, prefer %v when formatting errors 
           which are not known to be non-nil.
       codelingo/review:
-        comment:  type should use -appropriate verb such as {{result}}
+        comment:  type should use an appropriate verb such as `{{result}}` for `{{argType}}`
     query: |
 
       import codelingo/ast/go
@@ -68,9 +72,11 @@ tenets:
             name == "fmt"
         go.args:   
           go.basic_lit:
+            sibling_order == 0
             value as formatString
             kind == "string"
           go.ident:
             type as argType
-            containsGeneralVerb(formatString)
+            sibling_order as so
+            hasGeneralVerb(formatString, so)
             result != ""
